{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 113,
  "lineage": "ddc711bf-8996-2d32-f3f3-e8964358b5e5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/frontendIPConfigurations/azdevops-lbfrontend",
                "name": "azdevops-lbfrontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/publicIPAddresses/azdevops-ip"
              }
            ],
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb",
            "location": "westus",
            "name": "azdevops-lb",
            "resource_group_name": "azdevops-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "project": "Deploy Web Server in Azure"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/azdevops-backendpool",
            "loadbalancer_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb",
            "name": "azdevops-backendpool"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/probes/azdevops-lbhealth",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb",
            "name": "azdevops-lbhealth",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/azdevops-backendpool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/frontendIPConfigurations/azdevops-lbfrontend",
            "frontend_ip_configuration_name": "azdevops-lbfrontend",
            "frontend_port": 80,
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/loadBalancingRules/azdevops-lbrule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb",
            "name": "azdevops-lbrule",
            "probe_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/probes/azdevops-lbhealth",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_lb_probe.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-0",
            "internal_domain_name_suffix": "vtuxbihie3puvgcjwkkxjlm2nc.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "azdevops-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/virtualNetworks/azdevops-vnet/subnets/azdevops-subnet"
              }
            ],
            "location": "westus",
            "name": "azdevops-nic-0",
            "private_ip_address": "10.0.0.6",
            "private_ip_addresses": [
              "10.0.0.6"
            ],
            "resource_group_name": "azdevops-rg",
            "tags": {
              "environment": "dev",
              "project": "Deploy Web Server in Azure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-1",
            "internal_domain_name_suffix": "vtuxbihie3puvgcjwkkxjlm2nc.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "azdevops-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/virtualNetworks/azdevops-vnet/subnets/azdevops-subnet"
              }
            ],
            "location": "westus",
            "name": "azdevops-nic-1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "azdevops-rg",
            "tags": {
              "environment": "dev",
              "project": "Deploy Web Server in Azure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-2",
            "internal_domain_name_suffix": "vtuxbihie3puvgcjwkkxjlm2nc.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "azdevops-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/virtualNetworks/azdevops-vnet/subnets/azdevops-subnet"
              }
            ],
            "location": "westus",
            "name": "azdevops-nic-2",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "azdevops-rg",
            "tags": {
              "environment": "dev",
              "project": "Deploy Web Server in Azure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/azdevops-backendpool",
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-0/ipConfigurations/azdevops-ipconfig|/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/azdevops-backendpool",
            "ip_configuration_name": "azdevops-ipconfig",
            "network_interface_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-0"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/azdevops-backendpool",
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-1/ipConfigurations/azdevops-ipconfig|/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/azdevops-backendpool",
            "ip_configuration_name": "azdevops-ipconfig",
            "network_interface_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/azdevops-backendpool",
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-2/ipConfigurations/azdevops-ipconfig|/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/loadBalancers/azdevops-lb/backendAddressPools/azdevops-backendpool",
            "ip_configuration_name": "azdevops-ipconfig",
            "network_interface_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-2"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-0|/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkSecurityGroups/azdevops-nsg",
            "network_interface_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-0",
            "network_security_group_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkSecurityGroups/azdevops-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-1|/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkSecurityGroups/azdevops-nsg",
            "network_interface_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-1",
            "network_security_group_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkSecurityGroups/azdevops-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-2|/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkSecurityGroups/azdevops-nsg",
            "network_interface_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkInterfaces/azdevops-nic-2",
            "network_security_group_id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkSecurityGroups/azdevops-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkSecurityGroups/azdevops-nsg",
            "location": "westus",
            "name": "azdevops-nsg",
            "resource_group_name": "azdevops-rg",
            "security_rule": [],
            "tags": {
              "environment": "dev",
              "project": "Deploy Web Server in Azure"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "blockinternet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkSecurityGroups/azdevops-nsg/securityRules/BlockAllInternet",
            "name": "BlockAllInternet",
            "network_security_group_name": "azdevops-nsg",
            "priority": 120,
            "protocol": "*",
            "resource_group_name": "azdevops-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.0.0/16",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/networkSecurityGroups/azdevops-nsg/securityRules/AllowTrafficWithinVNET",
            "name": "AllowTrafficWithinVNET",
            "network_security_group_name": "azdevops-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "azdevops-rg",
            "source_address_prefix": "10.0.0.0/16",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "azdevops-project",
            "fqdn": "azdevops-project.westus.cloudapp.azure.com",
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/publicIPAddresses/azdevops-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.245.49.115",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "azdevops-ip",
            "resource_group_name": "azdevops-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "project": "Deploy Web Server in Azure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/virtualNetworks/azdevops-vnet/subnets/azdevops-subnet",
            "name": "azdevops-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azdevops-rg",
            "virtual_network_name": "azdevops-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a070e9ac-27e8-4a5f-9849-b29574ad9c6a",
            "id": "/subscriptions/1780bc89-8672-4bcd-8b0f-016eb40d22da/resourceGroups/azdevops-rg/providers/Microsoft.Network/virtualNetworks/azdevops-vnet",
            "location": "westus",
            "name": "azdevops-vnet",
            "resource_group_name": "azdevops-rg",
            "tags": {
              "environment": "dev",
              "project": "Deploy Web Server in Azure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}